@@ -25,6 +25,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="lic">
+        <release tarname="gcc-8.2.0-5-mingw32-lic.tar.xz" />
         <release tarname="gcc-8.2.0-4-mingw32-lic.tar.xz" />
         <release tarname="gcc-8.2.0-3-mingw32-lic.tar.xz" />
         <release tarname="gcc-8.2.0-2-mingw32-lic.tar.xz" />
@@ -46,6 +47,7 @@
         <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar" />
         <requires eq="libatomic-%-mingw32-dll-1.tar" />
 
+        <release tarname="gcc-core-8.2.0-5-mingw32-bin.tar.xz" />
         <release tarname="gcc-core-8.2.0-4-mingw32-bin.tar.xz" />
         <release tarname="gcc-core-8.2.0-3-mingw32-bin.tar.xz" />
         <release tarname="gcc-core-8.2.0-2-mingw32-bin.tar.xz" />
@@ -84,6 +86,7 @@
       </component>
 
       <component class="man">
+        <release tarname="gcc-8.2.0-5-mingw32-man.tar.xz" />
         <release tarname="gcc-8.2.0-4-mingw32-man.tar.xz" />
         <release tarname="gcc-8.2.0-3-mingw32-man.tar.xz" />
         <release tarname="gcc-8.2.0-2-mingw32-man.tar.xz" />
@@ -92,6 +95,7 @@
       </component>
 
       <component class="info">
+        <release tarname="gcc-8.2.0-5-mingw32-info.tar.xz" />
         <release tarname="gcc-8.2.0-4-mingw32-info.tar.xz" />
         <release tarname="gcc-8.2.0-3-mingw32-info.tar.xz" />
         <release tarname="gcc-8.2.0-2-mingw32-info.tar.xz" />
@@ -100,6 +104,7 @@
       </component>
 
       <component class="lang">
+        <release tarname="gcc-8.2.0-5-mingw32-lang.tar.xz" />
         <release tarname="gcc-8.2.0-4-mingw32-lang.tar.xz" />
         <release tarname="gcc-8.2.0-3-mingw32-lang.tar.xz" />
         <release tarname="gcc-8.2.0-2-mingw32-lang.tar.xz" />
@@ -131,6 +136,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libgcc-8.2.0-5-mingw32-dll-1.tar.xz" />
         <release tarname="libgcc-8.2.0-4-mingw32-dll-1.tar.xz" />
         <release tarname="libgcc-8.2.0-3-mingw32-dll-1.tar.xz" />
         <release tarname="libgcc-8.2.0-2-mingw32-dll-1.tar.xz" />
@@ -161,6 +167,7 @@
         <requires le="gcc-ada-%-mingw32-dev.tar" />
         <requires eq="gcc-core-%-mingw32-bin.tar" />
 
+        <release tarname="gcc-ada-8.2.0-5-mingw32-bin.tar.xz" />
         <release tarname="gcc-ada-8.2.0-4-mingw32-bin.tar.xz" />
         <release tarname="gcc-ada-8.2.0-3-mingw32-bin.tar.xz" />
         <release tarname="gcc-ada-8.2.0-2-mingw32-bin.tar.xz" />
@@ -204,6 +211,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libgnat-8.2.0-5-mingw32-dll-6.tar.xz" />
         <release tarname="libgnat-8.2.0-4-mingw32-dll-6.tar.xz" />
         <release tarname="libgnat-8.2.0-3-mingw32-dll-6.tar.xz" />
         <release tarname="libgnat-8.2.0-2-mingw32-dll-6.tar.xz" />
@@ -234,6 +242,7 @@
         <requires eq="gcc-core-%-mingw32-bin.tar" />
         <requires eq="mingw32-libstdc++-%-mingw32-dll-6.tar" />
 
+        <release tarname="gcc-c++-8.2.0-5-mingw32-bin.tar.xz" />
         <release tarname="gcc-c++-8.2.0-4-mingw32-bin.tar.xz" />
         <release tarname="gcc-c++-8.2.0-3-mingw32-bin.tar.xz" />
         <release tarname="gcc-c++-8.2.0-2-mingw32-bin.tar.xz" />
@@ -272,6 +281,7 @@
       </component>
 
       <component class="man">
+        <release tarname="gcc-c++-8.2.0-5-mingw32-man.tar.xz" />
         <release tarname="gcc-c++-8.2.0-4-mingw32-man.tar.xz" />
         <release tarname="gcc-c++-8.2.0-3-mingw32-man.tar.xz" />
         <release tarname="gcc-c++-8.2.0-2-mingw32-man.tar.xz" />
@@ -300,6 +310,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libstdc++-8.2.0-5-mingw32-dll-6.tar.xz" />
         <release tarname="libstdc++-8.2.0-4-mingw32-dll-6.tar.xz" />
         <release tarname="libstdc++-8.2.0-3-mingw32-dll-6.tar.xz" />
         <release tarname="libstdc++-8.2.0-2-mingw32-dll-6.tar.xz" />
@@ -328,6 +339,9 @@
       <component class="bin">
         <affiliate group="Basic Setup" />
         <requires eq="gcc-core-%-mingw32-bin.tar" />
+        <release tarname="gcc-fortran-8.2.0-5-mingw32-bin.tar.xz">
+          <requires eq="libgfortran-%-mingw32-dll-5.tar" />
+        </release>
         <release tarname="gcc-fortran-8.2.0-4-mingw32-bin.tar.xz">
           <requires eq="libgfortran-%-mingw32-dll-5.tar" />
         </release>
@@ -376,6 +390,7 @@
       </component>
 
       <component class="info">
+        <release tarname="gcc-fortran-8.2.0-5-mingw32-info.tar.xz" />
         <release tarname="gcc-fortran-8.2.0-4-mingw32-info.tar.xz" />
         <release tarname="gcc-fortran-8.2.0-3-mingw32-info.tar.xz" />
         <release tarname="gcc-fortran-8.2.0-2-mingw32-info.tar.xz" />
@@ -384,6 +399,7 @@
       </component>
 
       <component class="man">
+        <release tarname="gcc-fortran-8.2.0-5-mingw32-man.tar.xz" />
         <release tarname="gcc-fortran-8.2.0-4-mingw32-man.tar.xz" />
         <release tarname="gcc-fortran-8.2.0-3-mingw32-man.tar.xz" />
         <release tarname="gcc-fortran-8.2.0-2-mingw32-man.tar.xz" />
@@ -415,6 +431,7 @@
         <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar" />
         <requires eq="mingw32-libquadmath-%-mingw32-dll-0.tar" />
 
+        <release tarname="libgfortran-8.2.0-5-mingw32-dll-5.tar.xz" />
         <release tarname="libgfortran-8.2.0-4-mingw32-dll-5.tar.xz" />
         <release tarname="libgfortran-8.2.0-3-mingw32-dll-5.tar.xz" />
         <release tarname="libgfortran-8.2.0-2-mingw32-dll-5.tar.xz" />
@@ -470,6 +487,7 @@
         <requires eq="gcc-core-%-mingw32-bin.tar" />
         <requires eq="libobjc-%-mingw32-dll-4.tar" />
 
+        <release tarname="gcc-objc-8.2.0-5-mingw32-bin.tar.xz" />
         <release tarname="gcc-objc-8.2.0-4-mingw32-bin.tar.xz" />
         <release tarname="gcc-objc-8.2.0-3-mingw32-bin.tar.xz" />
         <release tarname="gcc-objc-8.2.0-2-mingw32-bin.tar.xz" />
@@ -515,6 +533,7 @@
       <component class="dll">
         <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar" />
 
+        <release tarname="libobjc-8.2.0-5-mingw32-dll-4.tar.xz" />
         <release tarname="libobjc-8.2.0-4-mingw32-dll-4.tar.xz" />
         <release tarname="libobjc-8.2.0-3-mingw32-dll-4.tar.xz" />
         <release tarname="libobjc-8.2.0-2-mingw32-dll-4.tar.xz" />
@@ -538,6 +557,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libatomic-8.2.0-5-mingw32-dll-1.tar.xz" />
         <release tarname="libatomic-8.2.0-4-mingw32-dll-1.tar.xz" />
         <release tarname="libatomic-8.2.0-3-mingw32-dll-1.tar.xz" />
         <release tarname="libatomic-8.2.0-2-mingw32-dll-1.tar.xz" />
@@ -563,6 +583,7 @@
       <component class="dll">
         <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar" />
 
+        <release tarname="libgomp-8.2.0-5-mingw32-dll-1.tar.xz" />
         <release tarname="libgomp-8.2.0-4-mingw32-dll-1.tar.xz" />
         <release tarname="libgomp-8.2.0-3-mingw32-dll-1.tar.xz" />
         <release tarname="libgomp-8.2.0-2-mingw32-dll-1.tar.xz" />
@@ -584,6 +605,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libssp-8.2.0-5-mingw32-dll-0.tar.xz" />
         <release tarname="libssp-8.2.0-4-mingw32-dll-0.tar.xz" />
         <release tarname="libssp-8.2.0-3-mingw32-dll-0.tar.xz" />
         <release tarname="libssp-8.2.0-2-mingw32-dll-0.tar.xz" />
@@ -601,6 +623,7 @@
       <component class="dll">
         <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar"/>
 
+        <release tarname="libquadmath-8.2.0-5-mingw32-dll-0.tar.xz" />
         <release tarname="libquadmath-8.2.0-4-mingw32-dll-0.tar.xz" />
         <release tarname="libquadmath-8.2.0-3-mingw32-dll-0.tar.xz" />
         <release tarname="libquadmath-8.2.0-2-mingw32-dll-0.tar.xz" />
@@ -609,6 +632,7 @@
       </component>
 
       <component class="info">
+        <release tarname="libquadmath-8.2.0-5-mingw32-info.tar.xz" />
         <release tarname="libquadmath-8.2.0-4-mingw32-info.tar.xz" />
         <release tarname="libquadmath-8.2.0-3-mingw32-info.tar.xz" />
         <release tarname="libquadmath-8.2.0-2-mingw32-info.tar.xz" />
